[project]
name = "youtube-blocking"  # Will be updated by Makefile
version = "0.1.0"
description = "ML Project with uv package management"
requires-python = ">=3.10"  # Will be updated by Makefile
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "jupyterlab>=3.6.1,<4.0",
    "jupyter-client>=8.0.3,<9.0",
    "jupyter-console>=6.5.1,<7.0",
    "jupyter-core>=5.2.0,<6.0",
    "jupyter_contrib_nbextensions>=0.7.0,<1.0",
    "jupyterlab_widgets>=3.0.6",
    "ipywidgets>=8.0.5",
    "widgetsnbextension>=4.0.6",
    "line-profiler>=4.0.2",
    "tqdm>=4.66,<5.0",
    "numpy>=1.25.2,<2.0",
    "matplotlib>=3.7.2,<4.0",
    "scipy>=1.11.2,<2.0",
    "pandas>=2.0.3,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.0.290",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.black]
line-length = 88
target-version = ['py3]  # Will be updated by Makefile
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"  # Will be updated by Makefile
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"  # Will be updated by Makefile
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]